--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -43,7 +43,11 @@
         android:id="@+id/event2"
         android:name="com.lnct.bhopal.ac.in.idealab.frgments.Event"
         android:label="Events"
-        tools:layout="@layout/fragment_event" />
+        tools:layout="@layout/fragment_event" >
+        <action
+            android:id="@+id/action_event2_to_fullscreenEventFragment"
+            app:destination="@id/fullscreenEventFragment" />
+    </fragment>
     <fragment
         android:id="@+id/projectFragment"
         android:name="com.lnct.bhopal.ac.in.idealab.frgments.ProjectFragment"
@@ -59,4 +63,16 @@
         android:name="com.lnct.bhopal.ac.in.idealab.frgments.ProfileFragment"
         android:label="Profile"
         tools:layout="@layout/fragment_profile" />
+    <fragment
+        android:id="@+id/fullscreenEventFragment"
+        android:name="com.lnct.bhopal.ac.in.idealab.frgments.FullscreenEventFragment"
+        android:label="Events"
+        tools:layout="@layout/fragment_fullscreen_event" >
+        <argument
+            android:name="EventData"
+            app:argType="com.lnct.bhopal.ac.in.idealab.models.EventModel" />
+        <action
+            android:id="@+id/action_fullscreenEventFragment_to_profileFragment"
+            app:destination="@id/profileFragment" />
+    </fragment>
 </navigation>
