--- a/app/src/main/res/layout/check_profile_dialog.xml
+++ b/app/src/main/res/layout/check_profile_dialog.xml
@@ -50,7 +50,7 @@
                 android:background="@color/logo_blue"
                 android:elevation="10sp"
                 android:padding="10sp"
-                android:text="Continue"
+                android:text="Register"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textSize="16sp"
