--- a/app/src/main/res/layout/fragment_fullscreen_event.xml
+++ b/app/src/main/res/layout/fragment_fullscreen_event.xml
@@ -40,6 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10sp"
             android:layout_marginEnd="10sp"
+            android:elevation="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
