--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -91,6 +91,7 @@
                 android:orientation="vertical"
                 android:layout_marginTop="30sp"
                 android:visibility="visible"
+                android:paddingBottom="10sp"
                 app:layout_constraintTop_toBottomOf="@+id/highlights_layout">
 
                 <TextView
@@ -119,9 +120,11 @@
                     android:layout_height="wrap_content"
                     android:scaleX="2"
                     android:scaleY="2"
+                    android:background="#00000000"
+                    android:layout_marginTop="-25sp"
                     android:text="•••"
                     android:textAlignment="center"
-                    android:textSize="12sp"
+                    android:textSize="10sp"
                     android:textStyle="bold" />
 
             </LinearLayout>
