--- a/app/src/main/res/layout/upcoming_events_recycler.xml
+++ b/app/src/main/res/layout/upcoming_events_recycler.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.google.android.material.card.MaterialCardView
@@ -13,6 +13,7 @@
         android:theme="@style/Theme.MaterialComponents.Light"
         app:cardCornerRadius="10sp"
         app:cardElevation="3sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="4:3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +27,8 @@
                 android:id="@+id/event_image"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:src="@drawable/event_image"
+                android:layout_margin="2sp"
+                android:src="@drawable/idea_lab_sq_logo"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintDimensionRatio="9:16"
                 app:layout_constraintStart_toStartOf="parent"
@@ -37,11 +39,11 @@
                 android:id="@+id/linearLayout2"
                 android:layout_width="0dp"
                 android:layout_height="80sp"
+                android:layout_marginStart="5sp"
+                android:layout_marginTop="25sp"
                 android:background="@color/white"
                 android:gravity="bottom"
                 android:orientation="vertical"
-                android:layout_marginTop="25sp"
-                android:layout_marginStart="5sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/event_image"
                 app:layout_constraintTop_toTopOf="parent">
@@ -51,8 +53,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ellipsize="marquee"
+                    android:marqueeRepeatLimit="marquee_forever"
                     android:maxLines="1"
-                    android:text="Event Name"
+                    android:text="No Upcoming Events"
                     android:textColor="@color/blue"
                     android:textSize="18sp"
                     android:textStyle="bold" />
@@ -61,7 +64,7 @@
                     android:id="@+id/event_date"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="29-12-2022"
+                    android:text="------"
                     android:textColor="@color/light_blue"
                     android:textSize="15sp"
                     android:textStyle="italic" />
