--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -56,7 +56,7 @@
                     android:layout_marginHorizontal="10sp"/>
 
                 <ImageView
-                    android:id="@+id/button_logout"
+                    android:id="@+id/user_logout"
                     android:layout_width="35sp"
                     android:layout_height="35sp"
                     android:src="@drawable/logout"
