--- a/app/src/main/res/anim/fade_scale.xml
+++ b/app/src/main/res/anim/fade_scale.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android">
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+    android:interpolator="@android:anim/anticipate_overshoot_interpolator">
 
 <!--    <scale-->
 <!--        android:fromXScale="0.5"-->
@@ -10,10 +11,60 @@
 <!--        android:pivotY="50%"-->
 <!--        android:duration="2000"/>-->
 
+<!--    <alpha-->
+<!--        android:fromAlpha="0.2"-->
+<!--        android:toAlpha="1"-->
+<!--        android:duration="2000"/>-->
+
+<!--    <scale-->
+<!--        android:interpolator="@android:anim/accelerate_decelerate_interpolator"-->
+<!--        android:fromXScale="1.0"-->
+<!--        android:toXScale="1.4"-->
+<!--        android:fromYScale="1.0"-->
+<!--        android:toYScale="0.6"-->
+<!--        android:pivotX="50%"-->
+<!--        android:pivotY="50%"-->
+<!--        android:fillAfter="false"-->
+<!--        android:duration="700" />-->
+
+    <rotate
+        android:fromDegrees="-30"
+        android:toDegrees="0"
+        android:pivotX="500%"
+        android:pivotY="100%"
+        android:duration="1500"/>
+
+    <scale
+        android:fromXScale="50%"
+        android:toXScale="100%"
+        android:fromYScale="40%"
+        android:toYScale="100%"
+        android:duration="1500"/>
+
     <alpha
-        android:fromAlpha="0.2"
+        android:fromAlpha="0"
         android:toAlpha="1"
-        android:duration="2000"/>
+        android:duration="1500"/>
+
+<!--    <set-->
+<!--        android:interpolator="@android:anim/anticipate_overshoot_interpolator"-->
+<!--        android:startOffset="700">-->
+<!--        <scale-->
+<!--            android:fromXScale="1.4"-->
+<!--            android:toXScale="0.0"-->
+<!--            android:fromYScale="0.6"-->
+<!--            android:toYScale="0.0"-->
+<!--            android:pivotX="50%"-->
+<!--            android:pivotY="50%"-->
+<!--            android:duration="400" />-->
+<!--        <rotate-->
+<!--            android:fromDegrees="0"-->
+<!--            android:toDegrees="-45"-->
+<!--            android:toYScale="0.0"-->
+<!--            android:pivotX="50%"-->
+<!--            android:pivotY="50%"-->
+<!--            android:duration="400" />-->
+<!--    </set>-->
 
 <!--    <translate-->
 <!--        android:fromYDelta="-50%"-->
