--- a/app/src/main/res/layout/fragment_contact_us.xml
+++ b/app/src/main/res/layout/fragment_contact_us.xml
@@ -56,7 +56,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10sp"
                 android:textSize="15sp"
-                android:text="Scan the code\nOr click here to downolad the app"
+                android:text="Scan the code\nOr click here to download the app"
                 app:layout_constraintTop_toBottomOf="@id/cardView"
                 android:textAlignment="center"/>
 
