--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -78,6 +78,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:iss_auto_cycle="true"
+                    app:iss_text_align="center"
                     app:iss_period="1000"
                     app:iss_delay="0"/>
 
@@ -121,7 +122,7 @@
                     android:scaleX="2"
                     android:scaleY="2"
                     android:background="#00000000"
-                    android:layout_marginTop="-25sp"
+                    android:layout_marginTop="-30sp"
                     android:text="•••"
                     android:textAlignment="center"
                     android:textSize="10sp"
@@ -162,9 +163,8 @@
                     android:id="@+id/pos_tv_gallery"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:scaleX="2"
+                    android:scaleX="1.5"
                     android:scaleY="2"
-                    android:layout_marginTop="11sp"
                     android:text="•••"
                     android:textAlignment="center"
                     android:textSize="12sp"
